--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-# MONGO_URI=mongodb+srv://janeleslieromano:anqyPYlPE2S5eIQ3@cluster0001.azsuek6.mongodb.net/bgc_bus?retryWrites=true&w=majority
-MONGO_URI=mongodb+srv://admin:Yeswecan123!@bgc-bus.czqtptz.mongodb.net/bgc_bus?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://janeleslieromano:anqyPYlPE2S5eIQ3@cluster0001.azsuek6.mongodb.net/bgc_bus?retryWrites=true&w=majority
+# MONGO_URI=mongodb+srv://admin:Yeswecan123!@bgc-bus.czqtptz.mongodb.net/bgc_bus?retryWrites=true&w=majority
 PORT=9000
 NODE_ENV=development
 JWT_SECRET=sikretongMalupet
